{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 48,
  "lineage": "80ec048c-49d1-3fcc-4abb-122d78a51785",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:internet-gateway/igw-0e0e054bad55fd364",
            "id": "igw-0e0e054bad55fd364",
            "owner_id": "018751003213",
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-igw",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-igw",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-0cc2ee0bcfab12937",
            "id": "rtb-0cc2ee0bcfab12937",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:route-table/rtb-070d3a4acf733440a",
            "id": "rtb-070d3a4acf733440a",
            "owner_id": "018751003213",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0e054bad55fd364",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-public",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-rt-public",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f1f91ea904b3856",
            "route_table_id": "rtb-0cc2ee0bcfab12937",
            "subnet_id": "subnet-04e728e930b8d4bb7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b762cd515e51c96",
            "route_table_id": "rtb-070d3a4acf733440a",
            "subnet_id": "subnet-0792e6f54105543b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "crop_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-0c542d17daadb3e5c",
            "description": "SG crop Lambda - outbound HTTPS to S3 and SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS salida (S3 Gateway Endpoint y SQS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0c542d17daadb3e5c",
            "ingress": [],
            "name": "image-processor-qa-sg-crop-lambda",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-crop-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-crop-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "upload_lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:security-group/sg-0c570ecb9968a1d9f",
            "description": "SG upload Lambda - outbound HTTPS to S3 and SQS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS salida (S3 Gateway Endpoint y SQS)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0c570ecb9968a1d9f",
            "ingress": [],
            "name": "image-processor-qa-sg-upload-lambda",
            "name_prefix": "",
            "owner_id": "018751003213",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-upload-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-sg-upload-lambda",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "timeouts": null,
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-04e728e930b8d4bb7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e728e930b8d4bb7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-priv-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:subnet/subnet-0792e6f54105543b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0792e6f54105543b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "018751003213",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-pub-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-pub-a",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc/vpc-04391aac1e919b96f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0462236b369ebaa00",
            "default_route_table_id": "rtb-0a9dd1769f59ed6d4",
            "default_security_group_id": "sg-059ce1ffc512e3535",
            "dhcp_options_id": "dopt-070d0ce1c9f89a1fc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04391aac1e919b96f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a9dd1769f59ed6d4",
            "owner_id": "018751003213",
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpc",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpc",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:018751003213:vpc-endpoint/vpce-0680d9d4c5d56ac0e",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0680d9d4c5d56ac0e",
            "ip_address_type": "ipv4",
            "owner_id": "018751003213",
            "policy": "{\"Statement\":[{\"Action\":[\"s3:GetObject\",\"s3:PutObject\"],\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"arn:aws:s3:::image-processor-qa-images-001/*\"}],\"Version\":\"2012-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-070d3a4acf733440a",
              "rtb-0cc2ee0bcfab12937"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpce-s3",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "tags_all": {
              "Environment": "qa",
              "ManagedBy": "Terraform",
              "Name": "image-processor-qa-vpce-s3",
              "Owner": "tu-nombre",
              "Project": "image-processor"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-04391aac1e919b96f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat_a",
            "module.vpc.aws_eip.nat_b",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.nat_a",
            "module.vpc.aws_nat_gateway.nat_b",
            "module.vpc.aws_route_table.private_a",
            "module.vpc.aws_route_table.private_b",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}